feat: Multiple assets selection.

--- a/src/global.css
+++ b/src/global.css
@@ -14,22 +14,22 @@ body,
     -webkit-user-drag: none;
 }
 
-/* width */
 ::-webkit-scrollbar {
     width: 10px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
     background: transparent;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
     background: #888;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+.selected-asset {
+    background-color: var(--colorSubtleBackgroundHover) !important;
 }
