--- a/src/global.css
+++ b/src/global.css
@@ -2,10 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body,
-.fui-FluentProvider {
-    height: 100%;
+#root {
+    height: 100vh;
     overflow: hidden;
 }
 
